# baglab

./: .gitignore  .gitmodules  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  package.xml  pyproject.toml  release-please-config.json  setup.cfg  setup.py  sitemap.xml
.github/workflows/: docs.yml  pr-title.yml  publish-mcap-backend.yml  publish.yml  test.yml
api/analysis/: index.html
api/diagnostics/: index.html
api/geometry/: index.html
api/io/: index.html
api/plot/: index.html
api/signal/: index.html
api/stats/: index.html
baglab_cpp_backend/: CMakeLists.txt  package.xml  pyproject.toml
baglab_cpp_backend/src/baglab_cpp_backend/: __init__.py
baglab_cpp_backend/src/cpp/: bindings.cpp  deserializer.cpp  deserializer.hpp  reader.cpp  reader.hpp
baglab_mcap_backend/: CMakeLists.txt  README.md  pyproject.toml
baglab_mcap_backend/src/baglab_mcap_backend/: __init__.py
baglab_mcap_backend/src/cpp/: bindings.cpp  cdr_deserializer.cpp  cdr_deserializer.hpp  mcap_reader.cpp  mcap_reader.hpp  schema_parser.cpp  schema_parser.hpp
docs/: getting-started.md
docs/api/: analysis.md  diagnostics.md  geometry.md  io.md  plot.md  signal.md  stats.md
docs/guide/: analysis.md  diagnostics.md  geometry.md  io.md  plot.md  signal.md  stats.md
example/: plot_twist_xyz.py  select_and_plot.py
example/test_bag/: metadata.yaml
getting-started/: index.html
guide/analysis/: index.html
guide/diagnostics/: index.html
guide/geometry/: index.html
guide/io/: index.html
guide/plot/: index.html
guide/signal/: index.html
guide/stats/: index.html
search/: search_index.json
src/baglab/: __init__.py  tui.py
src/baglab/analysis/: __init__.py  _delay.py  _step.py  _tracking.py
src/baglab/diagnostics/: __init__.py  _chain.py  _delay.py  _rate.py
src/baglab/geometry/: __init__.py  _common.py  angle.py  interp.py  numpy_conv.py  point.py  pose.py  quaternion.py  twist.py
src/baglab/io/: __init__.py  accessor.py  bag.py  stamp.py  typesys.py
src/baglab/plot/: __init__.py  _error.py  _step.py  _timeseries.py  _trajectory.py
src/baglab/signal/: __init__.py  _diff.py  _filter.py  _freq.py  _smooth.py
src/baglab/stats/: __init__.py  _core.py
test/: conftest.py  generate_test_bag.sh  test_analysis.py  test_diagnostics.py  test_geometry.py  test_io.py  test_io_time.py  test_plot.py  test_signal.py  test_stats.py
test/test_bag/: test_bag_0.mcap
test/test_rosbag_pkg/: package.xml  setup.cfg  setup.py
test/test_rosbag_pkg/launch/: record.launch.py
test/test_rosbag_pkg/scripts/: record.sh
test/test_rosbag_pkg/test_rosbag/: test_publisher.py
