[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "baglab"
version = "0.2.1"
description = "ROS2 rosbag data analysis library"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    { name = "Kotakku", email = "kotakkucu@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas",
    "pyarrow",
    "pyyaml",
    "rosbags>=0.9.20",
    "rosbags-dataframe",
    "scipy",
    "control",
    "matplotlib",
    "plotly",
]

[project.urls]
Homepage = "https://github.com/Kotakku/baglab"
Repository = "https://github.com/Kotakku/baglab"
Documentation = "https://kotakku.github.io/baglab/"

[project.optional-dependencies]
mcap = [
    "baglab-mcap-backend",
]
dev = [
    "pytest",
]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-p no:launch_testing_ros --ignore=test/test_rosbag_pkg"
