[metadata]
name = baglab
version = 0.2.0
description = ROS2 rosbag data analysis library
long_description = file: README.md
long_description_content_type = text/markdown
author = Kotakku
author_email = kotakkucu@gmail.com
license = Apache-2.0
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
python_requires = >=3.10
package_dir =
    = src
packages = find:
install_requires =
    pandas
    pyarrow
    pyyaml
    rosbags>=0.9.20
    rosbags-dataframe
    scipy
    control
    matplotlib
    plotly

[options.packages.find]
where = src

[options.extras_require]
dev = pytest
docs =
    mkdocs-material
    mkdocstrings[python]

[develop]
script_dir = $base/lib/baglab

[install]
install_scripts = $base/lib/baglab
