<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>baglab_cpp_backend</name>
  <version>0.1.0</version>
  <description>C++ acceleration backend for baglab</description>
  <maintainer email="kotakkucu@gmail.com">Kotakku</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>python3-dev</build_depend>
  <build_depend>pybind11_vendor</build_depend>

  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>rcpputils</depend>
  <depend>rmw</depend>
  <depend>rcutils</depend>
  <depend>rosidl_runtime_c</depend>
  <depend>rosidl_runtime_cpp</depend>
  <depend>rosidl_typesupport_introspection_cpp</depend>
  <depend>rosidl_typesupport_cpp</depend>

  <exec_depend>baglab</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
