[project]
name = "baglab-mcap-backend"
version = "0.3.0"
description = "MCAP C++ backend for baglab (no ROS 2 dependency)"
requires-python = ">=3.10"
dependencies = ["numpy"]

[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.22"
wheel.packages = ["src/baglab_mcap_backend"]
wheel.install-dir = "."
